# website-worker

./: Cargo.toml  README.md
.github/: release-drafter.yml
.github/workflows/: release.yml  upload.yaml
src/: main.rs
src/handlers/: building.rs  fetching.rs  mod.rs  parsing.rs  saving.rs  starting.rs
src/helpers/: error.rs  mod.rs  parse.rs  process.rs  save.rs  text.rs  utility.rs
src/models/: berita.rs  error.rs  mod.rs
