[package]
name = "website-worker"
version = "0.1.0"
authors = ["Arizal Akbar Zikri <akbarpn136@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.6"
serde = "1.0.114"
clokwerk = "0.3.0"
serde_json = "1.0.56"
tokio = { version = "0.2.21", features = ["full"] }
