[package]
name = "website-worker"
version = "0.2.0"
authors = ["Arizal Akbar Zikri <akbarpn136@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.6"
serde = "1.0.114"
dotenv = "0.15.0"
futures = "0.3.5"
clokwerk = "0.3.0"
serde_json = "1.0.56"
hyper-tls = "0.4.3"
tokio = { version = "0.2.21", features = ["full"] }
chrono = { version = "0.4.13", features = ["serde"] }
