[package]
name = "website-worker"
version = "1.0.0"
authors = ["Arizal Akbar Zikri <akbarpn136@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = { version = "0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.2", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
